--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Effective JavaScript: Frogger</title>
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Level:<span id="level"></span> | Part: <span id="part"></span></h1>
+    <h1>Classic Frogger Game</h1>
+    <h2>Level:<span id="level"></span> | Part: <span id="part"></span></h2>
+    <p id="score"></p>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
