--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Effective JavaScript: Frogger</title>
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </head>
 <body>
     <h1>Classic Frogger Game</h1>
