--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </head>
 <body>
+<div id="container">
     <h1>Classic Frogger Game</h1>
     <h2>Level: <span id="level"></span> | Part: <span id="part"></span></h2>
-    <p id="score"></p>
+    <div id="stars"><img src="images/StarScore.png"> <span id="starsTotal">0</span></div><div id="score"></div>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
+</div>
 </body>
 </html>
