--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div id="container">
     <h1>Classic Frogger Game</h1>
     <h2>Level: <span id="level"></span> | Part: <span id="part"></span></h2>
-    <div id="stars"><img src="images/StarScore.png"> <span id="starsTotal">0</span></div><div id="score"></div>
+    <div id="stars"><img src="images/StarScore.png"> <span id="starsTotal">0</span></div><div id="lives"></div>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
